# courses

./: README.md  pyproject.toml
AI-ARROW/: practise.ipynb
DLS/pandas/: README.md  hw-pandas.ipynb
DLS/python-intro-hw/: a.py
go-stepik/: README.md  io.md  variables.md
go-stepik/digits/: digits.go
go-stepik/problems-1/digits_sum/: digits_sum.go
go-stepik/problems-1/reverse_number/: reverse_number.go
go-stepik/problems-1/right_triangle/: right_triangle.go
go-stepik/problems-1/seconds/: seconds.go
go-stepik/problems-1/triangle_exist/: triangle_exist.go
golang/: if.md
golang/nlength/: nlength.go
golang/ptime/: ptime.go
