[tool.poetry]
name = "courses"
version = "1.0.0"
description = ""
authors = ["AlanTheKnight <51376126+AlanTheKnight@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
